v1/docs/ModelsEnrollmentRenewalRequest.md
# ModelsEnrollmentRenewalRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CertificateId** | Pointer to **int32** |  | [optional] 
**Thumbprint** | Pointer to **string** |  | [optional] 
**CertificateAuthority** | Pointer to **string** |  | [optional] 
**Template** | Pointer to **string** |  | [optional] 
**Timestamp** | Pointer to **time.Time** |  | [optional] 

## Methods

### NewModelsEnrollmentRenewalRequest

`func NewModelsEnrollmentRenewalRequest() *ModelsEnrollmentRenewalRequest`

NewModelsEnrollmentRenewalRequest instantiates a new ModelsEnrollmentRenewalRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsEnrollmentRenewalRequestWithDefaults

`func NewModelsEnrollmentRenewalRequestWithDefaults() *ModelsEnrollmentRenewalRequest`

NewModelsEnrollmentRenewalRequestWithDefaults instantiates a new ModelsEnrollmentRenewalRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCertificateId

`func (o *ModelsEnrollmentRenewalRequest) GetCertificateId() int32`

GetCertificateId returns the CertificateId field if non-nil, zero value otherwise.

### GetCertificateIdOk

`func (o *ModelsEnrollmentRenewalRequest) GetCertificateIdOk() (*int32, bool)`

GetCertificateIdOk returns a tuple with the CertificateId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateId

`func (o *ModelsEnrollmentRenewalRequest) SetCertificateId(v int32)`

SetCertificateId sets CertificateId field to given value.

### HasCertificateId

`func (o *ModelsEnrollmentRenewalRequest) HasCertificateId() bool`

HasCertificateId returns a boolean if a field has been set.

### GetThumbprint

`func (o *ModelsEnrollmentRenewalRequest) GetThumbprint() string`

GetThumbprint returns the Thumbprint field if non-nil, zero value otherwise.

### GetThumbprintOk

`func (o *ModelsEnrollmentRenewalRequest) GetThumbprintOk() (*string, bool)`

GetThumbprintOk returns a tuple with the Thumbprint field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetThumbprint

`func (o *ModelsEnrollmentRenewalRequest) SetThumbprint(v string)`

SetThumbprint sets Thumbprint field to given value.

### HasThumbprint

`func (o *ModelsEnrollmentRenewalRequest) HasThumbprint() bool`

HasThumbprint returns a boolean if a field has been set.

### GetCertificateAuthority

`func (o *ModelsEnrollmentRenewalRequest) GetCertificateAuthority() string`

GetCertificateAuthority returns the CertificateAuthority field if non-nil, zero value otherwise.

### GetCertificateAuthorityOk

`func (o *ModelsEnrollmentRenewalRequest) GetCertificateAuthorityOk() (*string, bool)`

GetCertificateAuthorityOk returns a tuple with the CertificateAuthority field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertificateAuthority

`func (o *ModelsEnrollmentRenewalRequest) SetCertificateAuthority(v string)`

SetCertificateAuthority sets CertificateAuthority field to given value.

### HasCertificateAuthority

`func (o *ModelsEnrollmentRenewalRequest) HasCertificateAuthority() bool`

HasCertificateAuthority returns a boolean if a field has been set.

### GetTemplate

`func (o *ModelsEnrollmentRenewalRequest) GetTemplate() string`

GetTemplate returns the Template field if non-nil, zero value otherwise.

### GetTemplateOk

`func (o *ModelsEnrollmentRenewalRequest) GetTemplateOk() (*string, bool)`

GetTemplateOk returns a tuple with the Template field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetTemplate

`func (o *ModelsEnrollmentRenewalRequest) SetTemplate(v string)`

SetTemplate sets Template field to given value.

### HasTemplate

`func (o *ModelsEnrollmentRenewalRequest) HasTemplate() bool`

HasTemplate returns a boolean if a field has been set.

### GetTimestamp

`func (o *ModelsEnrollmentRenewalRequest) GetTimestamp() time.Time`

GetTimestamp returns the Timestamp field if non-nil, zero value otherwise.

### GetTimestampOk

`func (o *ModelsEnrollmentRenewalRequest) GetTimestampOk() (*time.Time, bool)`

GetTimestampOk returns a tuple with the Timestamp field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetTimestamp

`func (o *ModelsEnrollmentRenewalRequest) SetTimestamp(v time.Time)`

SetTimestamp sets Timestamp field to given value.

### HasTimestamp

`func (o *ModelsEnrollmentRenewalRequest) HasTimestamp() bool`

HasTimestamp returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


